# dungeon-lab

./: .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  .npmrc  .prettierignore  .prettierrc  CLAUDE.md  Caddyfile  DICE_STYLING_GUIDE.md  Dockerfile.debug  README.md  create-test-zip.sh  dnd-5e-2024-conditions-dump.json  docker-compose.debug.yml  docker-compose.yml  handlebars.config.json  jsconfig.json  knip-report.json  knip.json  mongo_er_diagram.py  package-lock.json  package.json  playwright.config.ts  scratchpad.md  test-import.mjs  test-minimal-import.mjs  tsconfig.json  tsconfig.workspace.json  tsconfig.workspace.json.bak  vite.config.mts  vite.config.ts  vitest.workspace.js
.claude/: settings.json  settings.local.json
.cursor/: mcp.json
.cursor/rules/: browser-urls.mdc  import-typescript-files.mdc  login-rule.mdc  mcp-rules.mdc  no-javascript.mdc  pixi-testing.mdc  project-rules.mdc  server-rule.mdc  shared-rule.mdc  taskmaster.mdc  testing.mdc  troubleshooting.mdc  web.mdc
.devcontainer/: devcontainer.json
ai-workflows/: .env-example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
ai-workflows/configs/: prefect_config.py
ai-workflows/data/chroma_db/fed81fef-1937-4889-abfa-0399dfbd51e3/: index_metadata.pickle
ai-workflows/scripts/: serve_flows.py
ai-workflows/src/: test_openai.py
ai-workflows/src/configs/: prefect_config.py
ai-workflows/src/flows/: __init__.py  feature_detection.py  map_editing.py  map_generation.py  register.py
ai-workflows/src/gm_assistant/: README.md  agent.py  api.py  requirements.txt  start_api.py
ai-workflows/src/rag/: README.md  import_dnd_rules.py  query_dnd_rules.py
ai-workflows/src/rag/ai-workflows/data/chroma_db/00d55f40-0bc4-468c-9d78-918d8c7b3e09/: index_metadata.pickle
ai-workflows/src/utils/: artifact_helpers.py  callbacks.py  env_setup.py  flow_wrappers.py  minio_client.py
doc/: PLUGIN_BUILD.md  README.md
docs/: 5etools-compendium-converter-plan.md  README.md  ai-map-builder.md  architecture.md  codebase-review.md  compendium-architecture-migration.md  compendium-system-architecture.md  current-plugin-architecture.md  dndtypes.md  encounter-handling.md  encounter-implementation-status.md  encounter-implementation-tasks.md  encounter_implementation_plan.md  event-driven-architecture-migration.md  game-state-architecture-plan.md  gm-assistant-integration.md  gm-assistant-tasks.md  in-house-plugin-architecture.md  map-builder-tasks.md  map-editor-file-structure.md  map-editor-implementation-plan.md  map-editor-technical-notes.md  map-editor-types.md  mobile-optimization-plan.md  permissions-and-rules-system.md  plugin-architecture-implementation-tasks.md  plugin-architecture-proposal.md  plugin-architecture-strategy.md  plugin-architecture.md  plugin-marketplace-architecture.md  plugins.md  technical.md  vtt-gameplay-implementation-plan.md  websocket.md  workflow-system.md
gm_assistant/: README.md  env.example  pyproject.toml  requirements.txt  setup.sh
gm_assistant/src/: agent.py  api.py  config.py  import_dnd_rules.py  test_api.py
memory_bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
minimal-test-pack-correct/: manifest.json
playwright/: README.md  global-setup.ts  tsconfig.json
scripts/: README.md  import-compendium.mjs  prd.txt  test-api  test-api-get  test-api-post
vscode/: dungeon-lab.mongodb.js
(+56 files in other folders)
